2011-06-06  Ken Brown  <kbrown@cornell.edu>

	* cosettable.cc (CosetTable::CosetTable): Tweak relator grouping
	for Felsch.

2011-05-30  Ken Brown  <kbrown@cornell.edu>

	* Makefile.cygwin: Simplify by using implicit rules.
	* Makefile.linux: Ditto.
	* Makefile.cygwin-mingw: Ditto.

	* gens_and_words.h (switch_case): Declare new function.
	* gens_and_words.cc (switch_case): Implement.
	* coset.h: Remove some unnecessary semicolons.
	* cosettable.cc (CosetTable::CosetTable): Use 'switch_case' and
	'transform' to invert a word.

2011-05-26  Ken Brown  <kbrown@cornell.edu>

	* coset.cc (Coset): Make constructor more efficient and move it
	to coset.h.
	(print): Replace by operator<<.
	* coset.h: Implement constructor.  Replace getact and setact by
	operator[].  Declare operator<< as nonmember friend, replacing
	'print'.
	* cosettable.cc: Adapt to Coset class's getact/setact change and
	print change.
	(print): Replace by operator<<.
	* cosettable.h: Adapt to Coset class's getact/setact change and
	print change.  Declare operator<< as nonmember friend, replacing
	'print'.
	* toddcox.cc: Use << instead of print.

2011-05-25  Ken Brown  <kbrown@cornell.edu>

	Revert many of the 2011-05-16 changes so cosets require less
	memory.

	* coset.h (Coset::undefine): New member function.  Remove members
	getname(), setname(), getindex(), setindex(), isalive(),
	isdefined(), name, index.  Remove name and index as parameters to
	constructor.
	* coset.cc: Adapt constructor and print() to changes above.
	* cosettable.h: Add back p[] and isalive() members; change
	isdefined() to reflect changes to Coset class.
	* cosettable.cc (coincidence): Use undefine().  Adapt many
	functions to changes above.
	(process_deductions): Eliminate unnecessary scans.

2011-05-25  Ken Brown  <kbrown@cornell.edu>

	* coset.h (Coset): Replace isalive() member by conversion to
	bool.
	* cosettable.cc: Replace all uses of isalive() by direct tests of
	cosets.

2011-05-20  Ken Brown  <kbrown@cornell.edu>
